syntax = "proto3";

import "io/github/vinicreis/pubsub/server/channel/service/channel_requests.proto";
import "io/github/vinicreis/pubsub/server/channel/service/channel_responses.proto";

option java_package = "io.github.vinicreis.domain.server.channel.service";

service ChannelService {
  rpc add (AddRequest) returns (AddResponse) {}
  rpc list (ListRequest) returns (ListResponse) {}
  rpc removeById (RemoveByIdRequest) returns (RemoveByIdResponse) {}
  rpc publishSingle (PublishSingleRequest) returns (PublishResponse) {}
  rpc publishMultiple (PublishMultipleRequest) returns (PublishResponse) {}
  rpc subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}
}
